Footer hover animations added. Overflow bug on button border top pending in Firefox pending.

--- a/app/scss/_bem/_buttons.scss
+++ b/app/scss/_bem/_buttons.scss
@@ -181,17 +181,40 @@
 }
 
 .discrete-link{
+	position: relative;
 	display: inline-block;
 	text-decoration: none;
 	color: $lm-gray;
 	font-size: 16px;
 
+	&:before{
+		content: attr(fx-text);
+		white-space: nowrap;
+		position: absolute;
+		width: 0;
+		height: 100%;
+		left: 0;
+		color: $black;
+		overflow: hidden;
+		@include transitions(0.65s);
+	}
+	&:hover:before{
+		width: 100%;
+	}
+
 	&:after{
 		content: "";
-		position: relative;
-		display: block;
+		position: absolute;
 		width: 100%;
 		height: 1px;
+		right: 0;
+		bottom: -5px;
 		background-color: $lm-gray;
+		pointer-events: none;
+
+		@include transitions(0.65s);
+	}
+	&:hover:after{
+		width: 0;
 	}
 }
