--- a/app/scss/_bem/_forms.scss
+++ b/app/scss/_bem/_forms.scss
@@ -96,7 +96,7 @@
 
 					&__label{
 						position: absolute;
-						top: 0;
+						top: 0; left: 0;
 						font-size: 12px;
 						text-transform: uppercase;
 						color: $black;
